Fixed header jumpiness

--- a/src/app/less/base/header.less
+++ b/src/app/less/base/header.less
@@ -46,7 +46,6 @@
   height:42px;
   display: block;
   border: 1px solid black;
-  margin-bottom: 20px;
 }
 
 .navbar.ui-scrollfix {
